2010-05-24  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, TODO:
	    Notes about missing bits for full Tx-IGate.

	* historydb.c, historydb.h:
	    Keep knowledge of last coordinate on historydb.
	    Mark also last coordinate update time.

	* aprx.h, pbuf.h, parse_aprs.c, interface.c, digipeater.c:
	    Tx-IGate processing details..

2010-05-23  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.c, aprx.h, digipeater.c, filter.c, historydb.c, historydb.h,
	  igate.c, interface.c, parse_aprs.c:
	    Rearranged bits so that Tx-IGate's processing has transmitter
	    specific history database.   Better (but yet a bit incomplete)
	    Tx-IGate filtering is in interface.c.

	* kiss.c, aprx.8.in, aprx.conf.in, aprx-complex.conf.in,
	  netax25.c, aprx.h, ttyreader.c:
	    Add FLEXNET support.  (Finnish HamDR speaks it by default!)

	* interface.c:
	    Corrections on <kiss-subif> definitions, in particular
	    the aliases.
	    Fixed Tx-IGate workhorse interface_receive_3rdparty()'s
	    packet address header construction.

	* digipeater.c, aprx.h:
	    APRSIS specific via-path parameter parsing fixes, additional
	    debugging outputs, config error detection outputs.

	* netax25.c, ax25.c:
	    Debugging outputs.

	* ttyreader.c, aprx.h:
	    Debugging outputs.
	    Special KISS subtype "RFCRC" - received KISS frames have
	    two RANDOM bytes at their end. Looks like CRC16, but is
	    random junk.

	* erlang.c:
	    Debug printout.

	* beacon.c:
	    When an interface has no callsign, do not send beacon to it.
	    (It could be tty master interface which has multiple KISS
	     sub-interfaces.)

	* igate.c:
	    Parse packet to be tx-igated for acceptable address syntaxes.
	    Debug printouts.

2010-05-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsis.c, aprx.conf.in, aprx.8.in, doc/aprx-manual.odt:
	    Emphasize that <aprsis>'s login parameter is to be
	    set ONLY when it needs to be different than mycall